<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">CS301W06_Project</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="take">Take Photo</string>
    <string name="camera">Camera</string>
    <string name="compare">Compare</string>
    <string name="tag">Tag</string>
    <string name="delete">Delete</string>
    <string name="photo_detail">Photo Details</string>

</resources>